--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,19 +1,46 @@
-.red {
-  background-color: red;
+.main__container {
+  margin-top: calc(var(--header-height) + 1em);
 }
 
-.green {
-  background-color: green;
+@media screen and (max-width: 767px) {
+  .main__container {
+    margin-top: var(--header-height);
+  }
+
 }
 
-#login_state {
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
   display: block;
-  width: 15px;
-  height: 15px;
-  border-radius: 100%;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fcf;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fcf transparent transparent transparent;
 }
-
-#submit_post_form.hidden {
-  display: none;
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
 }
-
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
