Added new styling and SCSS files

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,19 +1,8 @@
+/* import Reihenfolge ist wichtig !!! */
+@import "variables";
+@import "mixins";
+@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "bootswatch";
 
-.red {
-    background-color: red;
-}
 
-.green {
-    background-color: green;
-}
-
-#login_state {
-    display: block;
-    width: 15px;
-    height: 15px;
-    border-radius: 100%;
-}
-
-#submit_post_form.hidden {
-    display: none;
-}
+@import "components";
